force-app/main/default/objects/Buyer_Requirement__c/Buyer_Requirement__c.object-meta.xml
<CustomObject>
    <label>Buyer Requirement</label>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>