force-app/main/default/objects/Buyer_Requirement__c/fields/Furnished_Required__c.field-meta.xml
<CustomField>
    <fullName>Furnished_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnished Required</label>
    <type>Checkbox</type>
</CustomField>