force-app/main/default/objects/Buyer_Requirement__c/fields/Lift_Required__c.field-meta.xml
<CustomField>
    <fullName>Lift_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lift Required</label>
    <type>Checkbox</type>
</CustomField>