force-app/main/default/objects/Buyer_Requirement__c/fields/Minimum_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Bedrooms__c</fullName>
    <label>Minimum Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>