force-app/main/default/objects/Buyer_Requirement__c/fields/Power_Backup_Required__c.field-meta.xml
<CustomField>
    <fullName>Power_Backup_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power Backup Required</label>
    <type>Checkbox</type>
</CustomField>