force-app/main/default/objects/Buyer_Requirement__c/fields/Preferred_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Property_Type__c</fullName>
    <label>Preferred Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Independent House</fullName>
            </value>
            <value>
                <fullName>Builder Floor</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>